# python-app-with-electron-gui

./: .gitignore  main.js  package-lock.json  pyproject.toml
engine/: weather_engine.py
gui/linkers/: weather.js
