[tool.poetry]
name = "python-app-with-electron-gui"
version = "0.1.0"
description = ""
authors = ["swordysrepo "]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
Flask = "^2.0.1"
keras = "^2.4.3"
tensorflow = "^2.5.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
